# BitcoinExchanges

./: CMakeLists.txt  README.md
inc/: curlhandler.hpp  jsonhandler.hpp
src/: curlhandler.cpp  jsonhandler.cpp  main.cpp
